--- a/task_management_app/pubspec.yaml
+++ b/task_management_app/pubspec.yaml
@@ -40,9 +40,18 @@ dependencies:
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^17.2.2
 
+  # Media handling
+  image_picker: ^1.1.2
+  http: ^1.2.1
+  mime: ^2.0.0
+  http_parser: ^4.1.1
+
   # Utils
   url_launcher: ^6.3.0
   cupertino_icons: ^1.0.8
+
+  # Deep linking support
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
