--- a/task_management_app/ios/Runner/Info.plist
+++ b/task_management_app/ios/Runner/Info.plist
@@ -45,5 +45,19 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Deep linking configuration -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.taskmanager.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>taskmanager</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
